--- a/404.html
+++ b/404.html
@@ -13,8 +13,8 @@
 <meta name=msapplication-TileColor content="#da532c">
 <meta name=theme-color content="#ffffff">
 <title>
-404 Page not found | 韩西瓜 | 我要喝啤酒
-</title><meta name=title content="404 Page not found | 韩西瓜 | 我要喝啤酒 ">
+404 Page not found | 韩西瓜 | 我要喝啤酒啊
+</title><meta name=title content="404 Page not found | 韩西瓜 | 我要喝啤酒啊 ">
 <link rel=stylesheet href=/techblog/font/iconfont.css>
 <link rel=stylesheet href=/techblog/css/main.min.css>
 <meta name=twitter:card content="summary">
@@ -46,7 +46,7 @@
 </div></div></nav><nav class=navbar-mobile id=nav-mobile style=display:none>
 <div class=container>
 <div class=navbar-header>
-<div> <a href=javascript:void(0); class=theme-switch><i class="iconfont icon-sun"></i></a>&nbsp;<a href=https://hanyu.cool/techblog/>韩西瓜 | 我要喝啤酒 </a></div><div class=menu-toggle>
+<div> <a href=javascript:void(0); class=theme-switch><i class="iconfont icon-sun"></i></a>&nbsp;<a href=https://hanyu.cool/techblog/>韩西瓜 | 我要喝啤酒啊 </a></div><div class=menu-toggle>
 <span></span><span></span><span></span>
 </div></div><div class=menu id=mobile-menu>
 <a class=menu-item href=../ title>Nav</a>
