--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 <meta name=msapplication-TileColor content="#da532c">
 <meta name=theme-color content="#ffffff">
 <title>
-韩西瓜 | 我要喝啤酒
-</title><meta name=title content="韩西瓜 | 我要喝啤酒 ">
+韩西瓜 | 我要喝啤酒啊
+</title><meta name=title content="韩西瓜 | 我要喝啤酒啊 ">
 <link rel=stylesheet href=/techblog/font/iconfont.css>
 <link rel=stylesheet href=/techblog/css/main.min.css>
-<link rel=alternate href=/techblog/index.xml type=application/rss+xml title="韩西瓜 | 我要喝啤酒 ">
-<link rel=feed href=/techblog/index.xml type=application/rss+xml title="韩西瓜 | 我要喝啤酒 ">
+<link rel=alternate href=/techblog/index.xml type=application/rss+xml title="韩西瓜 | 我要喝啤酒啊 ">
+<link rel=feed href=/techblog/index.xml type=application/rss+xml title="韩西瓜 | 我要喝啤酒啊 ">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="韩西瓜 | 我要喝啤酒 ">
+<meta name=twitter:title content="韩西瓜 | 我要喝啤酒啊 ">
 <meta name=twitter:description content>
-<script type=application/ld+json>{"@context":"http://schema.org","@type":"WebSite","url":"https:\/\/hanyu.cool\/techblog\/","author":{"@type":"Person","name":"韩西瓜"},"image":"https:\/\/hanyu.cool\/techblog\/cover.png","thumbnailUrl":"https:\/\/hanyu.cool\/techblog\/logo.png","name":"韩西瓜 | 我要喝啤酒 "}</script>
+<script type=application/ld+json>{"@context":"http://schema.org","@type":"WebSite","url":"https:\/\/hanyu.cool\/techblog\/","author":{"@type":"Person","name":"韩西瓜"},"image":"https:\/\/hanyu.cool\/techblog\/cover.png","thumbnailUrl":"https:\/\/hanyu.cool\/techblog\/logo.png","name":"韩西瓜 | 我要喝啤酒啊 "}</script>
 <script src=https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js></script>
 <script src=https://cdn.bootcdn.net/ajax/libs/typed.js/2.0.9/typed.min.js></script>
 <script></script>
@@ -50,7 +50,7 @@
 </div></div></nav><nav class=navbar-mobile id=nav-mobile style=display:none>
 <div class=container>
 <div class=navbar-header>
-<div> <a href=javascript:void(0); class=theme-switch><i class="iconfont icon-sun"></i></a>&nbsp;<a href=https://hanyu.cool/techblog/>韩西瓜 | 我要喝啤酒 </a></div><div class=menu-toggle>
+<div> <a href=javascript:void(0); class=theme-switch><i class="iconfont icon-sun"></i></a>&nbsp;<a href=https://hanyu.cool/techblog/>韩西瓜 | 我要喝啤酒啊 </a></div><div class=menu-toggle>
 <span></span><span></span><span></span>
 </div></div><div class=menu id=mobile-menu>
 <a class=menu-item href=../ title>Nav</a>
