修改标点 okhanyu/techblog@bf7ade1d113ee2c554075d5713c50556fd62642f

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <div class=avatar>
 <a href=posts/> <img src=https://file.hanyu.cool/site/home/static/v1/img/avatar.jpeg> </a>
 </div><span class=description id=description>
-嘿，朋友，我是韩西瓜，一名Developer，目前就职于腾讯，欢迎关注公众号「韩西瓜」,期待和你遇见呀
+嘿，朋友，我是韩西瓜，一名Developer，目前就职于腾讯，欢迎关注公众号「韩西瓜」，期待和你遇见呀
 </span>
 <div class=social-links style=font-size:10px>
 <a href=https://github.com/okhanyu target=_blank rel="me noopener noreffer" target=_blank><i class="iconfont icon-github"></i></a>
