--- a/index.html
+++ b/index.html
@@ -1,155 +1,36 @@
-<!doctype html><html lang=zh-cn>
-<head>
-<meta name=generator content="Hugo 0.93.1">
-<meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="chrome=1">
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=robots content="noodp">
-<link rel=canonical href=https://hanyu.cool/techblog/>
-<link rel="shortcut icon" type=image/x-icon href=https://hanyu.cool/techblog/favicon.ico>
-<link rel=apple-touch-icon sizes=180x180 href=https://hanyu.cool/techblog/apple-touch-icon.png>
-<link rel=icon type=image/png sizes=32x32 href=https://hanyu.cool/techblog/favicon-32x32.png>
-<link rel=icon type=image/png sizes=16x16 href=https://hanyu.cool/techblog/favicon-16x16.png>
-<link rel=mask-icon href=/safari-pinned-tab.svg color=#5bbad5>
-<meta name=msapplication-TileColor content="#da532c">
-<meta name=theme-color content="#ffffff">
-<title>
-韩西瓜 | 我要喝啤酒啊
-</title><meta name=title content="韩西瓜 | 我要喝啤酒啊 ">
-<link rel=stylesheet href=/techblog/font/iconfont.css>
-<link rel=stylesheet href=/techblog/css/main.min.css>
-<link rel=alternate href=/techblog/index.xml type=application/rss+xml title="韩西瓜 | 我要喝啤酒啊 ">
-<link rel=feed href=/techblog/index.xml type=application/rss+xml title="韩西瓜 | 我要喝啤酒啊 ">
-<meta name=twitter:card content="summary">
-<meta name=twitter:title content="韩西瓜 | 我要喝啤酒啊 ">
-<meta name=twitter:description content>
-<script type=application/ld+json>{"@context":"http://schema.org","@type":"WebSite","url":"https:\/\/hanyu.cool\/techblog\/","author":{"@type":"Person","name":"韩西瓜"},"image":"https:\/\/hanyu.cool\/techblog\/cover.png","thumbnailUrl":"https:\/\/hanyu.cool\/techblog\/logo.png","name":"韩西瓜 | 我要喝啤酒啊 "}</script>
-<script src=https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js></script>
+<!doctype html><html lang=zh-cn><head><meta name=generator content="Hugo 0.100.2"><meta charset=utf-8><meta http-equiv=x-ua-compatible content="chrome=1"><meta name=viewport content="width=device-width,initial-scale=1"><meta name=robots content="noodp"><link rel=canonical href=https://hanyu.cool/techblog/><link rel='shortcut icon' type=image/x-icon href=https://hanyu.cool/techblog/favicon.ico><link rel=apple-touch-icon sizes=180x180 href=https://hanyu.cool/techblog/apple-touch-icon.png><link rel=icon type=image/png sizes=32x32 href=https://hanyu.cool/techblog/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=https://hanyu.cool/techblog/favicon-16x16.png><link rel=mask-icon href=/safari-pinned-tab.svg color=#5bbad5><meta name=msapplication-TileColor content="#da532c"><meta name=theme-color content="#ffffff"><title>韩西瓜 | 我要喝啤酒啊</title><meta name=title content="韩西瓜 | 我要喝啤酒啊 "><link rel=stylesheet href=/techblog/font/iconfont.css><link rel=stylesheet href=/techblog/css/main.min.css><link rel=alternate href=/techblog/index.xml type=application/rss+xml title="韩西瓜 | 我要喝啤酒啊 "><link rel=feed href=/techblog/index.xml type=application/rss+xml title="韩西瓜 | 我要喝啤酒啊 "><meta name=twitter:card content="summary"><meta name=twitter:title content="韩西瓜 | 我要喝啤酒啊 "><meta name=twitter:description content><script type=application/ld+json>{"@context":"http://schema.org","@type":"WebSite","url":"https:\/\/hanyu.cool\/techblog\/","author":{"@type":"Person","name":"韩西瓜"},"image":"https:\/\/hanyu.cool\/techblog\/cover.png","thumbnailUrl":"https:\/\/hanyu.cool\/techblog\/logo.png","name":"韩西瓜 | 我要喝啤酒啊 "}</script><script src=https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js></script>
 <script src=https://cdn.bootcdn.net/ajax/libs/typed.js/2.0.9/typed.min.js></script>
-<script></script>
-</head><body>
-<div class=wrapper>
-<nav class=navbar>
-<div class=container>
-<div class="navbar-header header-logo header__inner">
-<a href=/techblog style=text-decoration:none>
-<div class=logo>
-<span class=logo__mark>></span>
+<script></script></head><body><div class=wrapper><nav class=navbar><div class=container><div class="navbar-header header-logo header__inner"><a href=/techblog style=text-decoration:none><div class=logo><span class=logo__mark>></span>
 <span class=logo__text>hello</span>
-<span class=logo__cursor>
-</span>
-</div></a>
-</div><div class="menu navbar-right header__right">
-<a class=menu-item href=../ title>Nav</a>
+<span class=logo__cursor></span></div></a></div><div class="menu navbar-right header__right"><a class=menu-item href=../ title>Nav</a>
 <a class=menu-item href=/techblog/ title>Home</a>
 <a class=menu-item href=/techblog/posts/ title>Posts</a>
 <a class=menu-item href=/techblog/categories/ title>categories</a>
 <a class=menu-item href=/techblog/tags/ title>Tags</a>
 <a class=menu-item href=/techblog/about/ title>About</a>
-<a href=javascript:void(0); class=theme-switch><i class="iconfont icon-sun"></i></a>&nbsp;
-</div></div></nav><nav class=navbar-mobile id=nav-mobile style=display:none>
-<div class=container>
-<div class=navbar-header>
-<div> <a href=javascript:void(0); class=theme-switch><i class="iconfont icon-sun"></i></a>&nbsp;<a href=https://hanyu.cool/techblog/>韩西瓜 | 我要喝啤酒啊 </a></div><div class=menu-toggle>
-<span></span><span></span><span></span>
-</div></div><div class=menu id=mobile-menu>
-<a class=menu-item href=../ title>Nav</a>
+<a href=javascript:void(0); class=theme-switch><i class="iconfont icon-sun"></i></a>&nbsp;</div></div></nav><nav class=navbar-mobile id=nav-mobile style=display:none><div class=container><div class=navbar-header><div><a href=javascript:void(0); class=theme-switch><i class="iconfont icon-sun"></i></a>&nbsp;<a href=https://hanyu.cool/techblog/>韩西瓜 | 我要喝啤酒啊</a></div><div class=menu-toggle><span></span><span></span><span></span></div></div><div class=menu id=mobile-menu><a class=menu-item href=../ title>Nav</a>
 <a class=menu-item href=/techblog/ title>Home</a>
 <a class=menu-item href=/techblog/posts/ title>Posts</a>
 <a class=menu-item href=/techblog/categories/ title>categories</a>
 <a class=menu-item href=/techblog/tags/ title>Tags</a>
-<a class=menu-item href=/techblog/about/ title>About</a>
-</div></div></nav><main class=main>
-<div class=container>
-<script>function init(){var e=$("#description").text(),n,t=document.getElementById("description");t.innerHTML="",n=new Typed("#description",{strings:[e],typeSpeed:80})}window.onload=function(){init()}</script>
-<div class=post-warp style=padding-top:3rem>
-<div class=intro>
-<div class=avatar>
-<a href=posts/> <img src=https://file.hanyu.cool/site/home/static/v1/img/avatar.jpeg> </a>
-</div><span class=description id=description>
-嘿，朋友，我是韩西瓜，一名Developer，目前就职于腾讯，欢迎关注公众号「韩西瓜」，期待和你遇见呀
-</span>
-<div class=social-links style=font-size:10px>
-<a href=https://github.com/okhanyu target=_blank rel="me noopener noreffer" target=_blank><i class="iconfont icon-github"></i></a>
+<a class=menu-item href=/techblog/about/ title>About</a></div></div></nav><main class=main><div class=container><script>function init(){var n,e=$("#description").text(),t=document.getElementById("description");t.innerHTML="",n=new Typed("#description",{strings:[e],typeSpeed:80})}window.onload=function(){init()}</script><div class=post-warp style=padding-top:3rem><div class=intro><div class=avatar><a href=posts/><img src=https://file.hanyu.cool/site/home/static/v1/img/avatar.jpeg></a></div><span class=description id=description>嘿，朋友，我是韩西瓜，一名Developer，目前就职于腾讯，欢迎关注公众号「韩西瓜」，期待和你遇见呀</span><div class=social-links style=font-size:10px><a href=https://github.com/okhanyu target=_blank rel="me noopener noreffer" target=_blank><i class="iconfont icon-github"></i></a>
 <a href=https://weibo.com/sohanyu rel="me noopener noreffer" target=_blank><i class="iconfont icon-weibo"></i></a>
 <a href=https://www.zhihu.com/people/okhanyu rel="me noopener noreffer" target=_blank><i class="iconfont icon-zhihu"></i></a>
 <a href=https://www.douban.com/people/# rel="me noopener noreffer" target=_blank><i class="iconfont icon-douban"></i></a>
-<a href=mailto:hanyu@hanyu.cool rel="me noopener noreffer"><i class="iconfont icon-mail" target=_blank></i></a>
-</div></div><article class=post itemscope itemscope itemtype=http://schema.org/Article style=margin-bottom:2rem>
-<header class=post-header>
-<span class=post-title itemprop="name headline" style=font-weight:700;font-size:25px><a href=https://hanyu.cool/techblog/2022/mianjing/>面试系列 | 真 · 大厂面试复盘</a></span>
-</header><div class=post-content>
-<p><img src=https://file.hanyu.cool/site/tech/article/mianjing/%E9%9D%A2%E7%BB%8F-%E7%9C%9F%E4%B8%AA%E7%AB%99-%E5%B0%81%E9%9D%A2.png class=featured_image style=width:100%!important;height:200px!important></p><div style=color:gray;font-size:12px> 背景 哈喽，我是西瓜，现在是2022了，年前11月上旬到12月上旬一直在面试，年后很多很多人催着我出面经，现在我一说话就问我“面经好了没，我等 </div><a href=/techblog/2022/mianjing/>Read More…</a>
-</div><div class=post-footer>
-<div class=post-meta>
-<span class=post-time>
-2022-02-24 16:19
-</span>
+<a href=mailto:hanyu@hanyu.cool rel="me noopener noreffer"><i class="iconfont icon-mail" target=_blank></i></a></div></div><article class=post itemscope itemscope itemtype=http://schema.org/Article style=margin-bottom:2rem><header class=post-header><span class=post-title itemprop="name headline" style=font-weight:700;font-size:25px><a href=https://hanyu.cool/techblog/2022/mianjing/>面试系列 | 真 · 大厂面试复盘</a></span></header><div class=post-content><p><img src=https://file.hanyu.cool/site/tech/article/mianjing/%E9%9D%A2%E7%BB%8F-%E7%9C%9F%E4%B8%AA%E7%AB%99-%E5%B0%81%E9%9D%A2.png class=featured_image style=width:100%!important;height:200px!important></p><div style=color:gray;font-size:12px>背景 哈喽，我是西瓜，现在是2022了，年前11月上旬到12月上旬一直在面试，年后很多很多人催着我出面经，现在我一说话就问我“面经好了没，我等</div><a href=/techblog/2022/mianjing/>Read More…</a></div><div class=post-footer><div class=post-meta><span class=post-time>2022-02-24 16:19</span>
 in
 <i class="iconfont icon-folder"></i>
-<span class=post-category>
-<a href=https://hanyu.cool/techblog/categories/%E9%9D%A2%E8%AF%95%E5%A4%8D%E7%9B%98/> 面试复盘 </a>
-</span>
-</div><div class=post-tags style=padding:0>
-<span class=tag><a href=https://hanyu.cool/techblog/tags/%E9%9D%A2%E7%BB%8F/>
-#面经</a></span>
-<span class=tag><a href=https://hanyu.cool/techblog/tags/%E6%B1%82%E8%81%8C/>
-#求职</a></span>
-</div></div></article><article class=post itemscope itemscope itemtype=http://schema.org/Article style=margin-bottom:2rem>
-<header class=post-header>
-<span class=post-title itemprop="name headline" style=font-weight:700;font-size:25px><a href=https://hanyu.cool/techblog/2022/mysql-index/>MySQL系列 | 浅尝MySQL索引</a></span>
-</header><div class=post-content>
-<p><img src=https://file.hanyu.cool/site/tech/article/mysql_index/MySQL%E5%B0%81%E9%9D%A2%E5%9B%BE-%E4%B8%AA%E7%AB%99-%E9%95%BF%E5%9B%BE.png class=featured_image style=width:100%!important;height:200px!important></p><div style=color:gray;font-size:12px> 写在前面的废话 Hello，大家好，我是西瓜，一年前我写了一篇文章，然后拖更至今。 这其中有自己懒惰、工作变动等因素，年前这段时间一直在求职面试 </div><a href=/techblog/2022/mysql-index/>Read More…</a>
-</div><div class=post-footer>
-<div class=post-meta>
-<span class=post-time>
-2022-02-09 14:40
-</span>
+<span class=post-category><a href=https://hanyu.cool/techblog/categories/%E9%9D%A2%E8%AF%95%E5%A4%8D%E7%9B%98/>面试复盘</a></span></div><div class=post-tags style=padding:0><span class=tag><a href=https://hanyu.cool/techblog/tags/%E9%9D%A2%E7%BB%8F/>#面经</a></span>
+<span class=tag><a href=https://hanyu.cool/techblog/tags/%E6%B1%82%E8%81%8C/>#求职</a></span></div></div></article><article class=post itemscope itemscope itemtype=http://schema.org/Article style=margin-bottom:2rem><header class=post-header><span class=post-title itemprop="name headline" style=font-weight:700;font-size:25px><a href=https://hanyu.cool/techblog/2022/mysql-index/>MySQL系列 | 浅尝MySQL索引</a></span></header><div class=post-content><p><img src=https://file.hanyu.cool/site/tech/article/mysql_index/MySQL%E5%B0%81%E9%9D%A2%E5%9B%BE-%E4%B8%AA%E7%AB%99-%E9%95%BF%E5%9B%BE.png class=featured_image style=width:100%!important;height:200px!important></p><div style=color:gray;font-size:12px>写在前面的废话 Hello，大家好，我是西瓜，一年前我写了一篇文章，然后拖更至今。 这其中有自己懒惰、工作变动等因素，年前这段时间一直在求职面试</div><a href=/techblog/2022/mysql-index/>Read More…</a></div><div class=post-footer><div class=post-meta><span class=post-time>2022-02-09 14:40</span>
 in
 <i class="iconfont icon-folder"></i>
-<span class=post-category>
-<a href=https://hanyu.cool/techblog/categories/%E6%95%B0%E6%8D%AE%E5%BA%93/> 数据库 </a>
-</span>
-</div><div class=post-tags style=padding:0>
-<span class=tag><a href=https://hanyu.cool/techblog/tags/mysql/>
-#MySQL</a></span>
-<span class=tag><a href=https://hanyu.cool/techblog/tags/%E7%B4%A2%E5%BC%95/>
-#索引</a></span>
-</div></div></article><article class=post itemscope itemscope itemtype=http://schema.org/Article style=margin-bottom:2rem>
-<header class=post-header>
-<span class=post-title itemprop="name headline" style=font-weight:700;font-size:25px><a href=https://hanyu.cool/techblog/2021/redis-lock/>Redis系列 | 分布式锁-电商防超卖的N+1个坑！</a></span>
-</header><div class=post-content>
-<p><img src=https://file.hanyu.cool/site/tech/article/redis_lock_shop/Redis%E5%88%86%E5%B8%83%E5%BC%8F%E9%94%81%E5%B0%81%E9%9D%A2%E5%9B%BE-%E4%B8%AA%E7%AB%99-%E9%95%BF%E5%9B%BE.png class=featured_image style=width:100%!important;height:200px!important></p><div style=color:gray;font-size:12px> 大家好，我是西瓜。 今天和同事讨论库存防超卖问题，发现虽然只是简单的库存扣减场景，却隐藏着很多坑，一不小心就容易翻车，让西瓜推土机来填平这些坑 </div><a href=/techblog/2021/redis-lock/>Read More…</a>
-</div><div class=post-footer>
-<div class=post-meta>
-<span class=post-time>
-2021-03-23 14:40
-</span>
+<span class=post-category><a href=https://hanyu.cool/techblog/categories/%E6%95%B0%E6%8D%AE%E5%BA%93/>数据库</a></span></div><div class=post-tags style=padding:0><span class=tag><a href=https://hanyu.cool/techblog/tags/mysql/>#MySQL</a></span>
+<span class=tag><a href=https://hanyu.cool/techblog/tags/%E7%B4%A2%E5%BC%95/>#索引</a></span></div></div></article><article class=post itemscope itemscope itemtype=http://schema.org/Article style=margin-bottom:2rem><header class=post-header><span class=post-title itemprop="name headline" style=font-weight:700;font-size:25px><a href=https://hanyu.cool/techblog/2021/redis-lock/>Redis系列 | 分布式锁-电商防超卖的N+1个坑！</a></span></header><div class=post-content><p><img src=https://file.hanyu.cool/site/tech/article/redis_lock_shop/Redis%E5%88%86%E5%B8%83%E5%BC%8F%E9%94%81%E5%B0%81%E9%9D%A2%E5%9B%BE-%E4%B8%AA%E7%AB%99-%E9%95%BF%E5%9B%BE.png class=featured_image style=width:100%!important;height:200px!important></p><div style=color:gray;font-size:12px>大家好，我是西瓜。 今天和同事讨论库存防超卖问题，发现虽然只是简单的库存扣减场景，却隐藏着很多坑，一不小心就容易翻车，让西瓜推土机来填平这些坑</div><a href=/techblog/2021/redis-lock/>Read More…</a></div><div class=post-footer><div class=post-meta><span class=post-time>2021-03-23 14:40</span>
 in
 <i class="iconfont icon-folder"></i>
-<span class=post-category>
-<a href=https://hanyu.cool/techblog/categories/%E4%B8%AD%E9%97%B4%E4%BB%B6/> 中间件 </a>
-</span>
-</div><div class=post-tags style=padding:0>
-<span class=tag><a href=https://hanyu.cool/techblog/tags/redis/>
-#Redis</a></span>
-<span class=tag><a href=https://hanyu.cool/techblog/tags/jedis/>
-#Jedis</a></span>
-</div></div></article><article class=post itemscope itemscope itemtype=http://schema.org/Article style=margin-bottom:2rem>
-<header class=post-header>
-<span class=post-title itemprop="name headline" style=font-weight:700;font-size:25px><a href=https://hanyu.cool/techblog/about/>关于我？</a></span>
-</header><div class=post-content>
-<div style=color:gray;font-size:12px> 嘿，朋友，我是韩西瓜，一名Developer，目前就职于腾讯，欢迎关注公众号「韩西瓜」 </div></div><div class=post-footer>
-<div class=post-meta>
-<span class=post-time>
-2019-05-12 00:00
-</span>
-in
-</div></div></article></div></div></main><footer class=footer>
-<div class=copyright>
-&copy;
+<span class=post-category><a href=https://hanyu.cool/techblog/categories/%E4%B8%AD%E9%97%B4%E4%BB%B6/>中间件</a></span></div><div class=post-tags style=padding:0><span class=tag><a href=https://hanyu.cool/techblog/tags/redis/>#Redis</a></span>
+<span class=tag><a href=https://hanyu.cool/techblog/tags/jedis/>#Jedis</a></span></div></div></article><article class=post itemscope itemscope itemtype=http://schema.org/Article style=margin-bottom:2rem><header class=post-header><span class=post-title itemprop="name headline" style=font-weight:700;font-size:25px><a href=https://hanyu.cool/techblog/about/>关于我？</a></span></header><div class=post-content><div style=color:gray;font-size:12px>嘿，朋友，我是韩西瓜，一名Developer，目前就职于腾讯，欢迎关注公众号「韩西瓜」</div></div><div class=post-footer><div class=post-meta><span class=post-time>2019-05-12 00:00</span>
+in</div></div></article></div></div></main><footer class=footer><div class=copyright>&copy;
 <span itemprop=copyrightYear>2021 - 2022</span>
-<span class=author itemprop=copyrightHolder><a href=https://hanyu.cool/techblog/>韩西瓜</a> | </span>
-<span>Thanks ♥ <a href=https://gohugo.io/ target=_blank rel="external nofollow noopener noreffer">Hugo</a></span>
-</div></footer><script src=/techblog/js/vendor_main.min.js async></script>
-</div></body></html>
+<span class=author itemprop=copyrightHolder><a href=https://hanyu.cool/techblog/>韩西瓜</a> |</span>
+<span>Thanks ♥ <a href=https://gohugo.io/ target=_blank rel="external nofollow noopener noreffer">Hugo</a></span></div></footer><script src=/techblog/js/vendor_main.min.js async></script></div></body></html>
